[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/piano.png" type="Texture" id=1]
[ext_resource path="res://scripts/piano.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/C.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/A.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/F.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/F#.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/D.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/D#.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/C#.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/E.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/G#.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/G.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/sound/B.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/A#.ogg" type="AudioStream" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 76, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 76, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 76, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 76, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 76, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 76, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 76, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 384, 76, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 352, 76, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 224, 76, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 76, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 320, 76, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 288, 76, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "B",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "C",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "E",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "F",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "D",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "G",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "A",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "static",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "A#",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "C#",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "D#",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "G#",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "F#",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 2.4, 15.1511 )

[node name="AnimatedSprite" type="AnimatedSprite"]
position = Vector2( 504.93, 298.163 )
scale = Vector2( 10, 9 )
frames = SubResource( 14 )
animation = "static"
script = ExtResource( 2 )

[node name="C" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="C"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="C"]
stream = ExtResource( 3 )
mix_target = 1

[node name="C2" type="Area2D" parent="."]
position = Vector2( 6.30704, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="C2"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="C2"]
stream = ExtResource( 9 )

[node name="D" type="Area2D" parent="."]
position = Vector2( 11.907, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="D"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="D"]
stream = ExtResource( 7 )

[node name="D2" type="Area2D" parent="."]
position = Vector2( 17.507, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="D2"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="D2"]
stream = ExtResource( 8 )

[node name="E" type="Area2D" parent="."]
position = Vector2( 24.707, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="E"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="E"]
stream = ExtResource( 10 )

[node name="F" type="Area2D" parent="."]
position = Vector2( 32.707, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="F"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="F"]
stream = ExtResource( 5 )

[node name="F2" type="Area2D" parent="."]
position = Vector2( 39.107, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="F2"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="F2"]
stream = ExtResource( 6 )

[node name="G" type="Area2D" parent="."]
position = Vector2( 44.707, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="G"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="G"]
stream = ExtResource( 12 )

[node name="G2" type="Area2D" parent="."]
position = Vector2( 50.307, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="G2"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="G2"]
stream = ExtResource( 11 )

[node name="A" type="Area2D" parent="."]
position = Vector2( 55.907, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="A"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="A"]
stream = ExtResource( 4 )

[node name="A2" type="Area2D" parent="."]
position = Vector2( 61.507, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="A2"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="A2"]
stream = ExtResource( 14 )

[node name="B" type="Area2D" parent="."]
position = Vector2( 67.907, -0.240345 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="B"]
position = Vector2( -33.9884, 0.0399551 )
shape = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="B"]
stream = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
[connection signal="input_event" from="C" to="." method="_on_C_input_event"]
[connection signal="input_event" from="C2" to="." method="_on_C2_input_event"]
[connection signal="input_event" from="D" to="." method="_on_D_input_event"]
[connection signal="input_event" from="D2" to="." method="_on_D2_input_event"]
[connection signal="input_event" from="E" to="." method="_on_E_input_event"]
[connection signal="input_event" from="F" to="." method="_on_F_input_event"]
[connection signal="input_event" from="F2" to="." method="_on_F2_input_event"]
[connection signal="input_event" from="G" to="." method="_on_G_input_event"]
[connection signal="input_event" from="G2" to="." method="_on_G2_input_event"]
[connection signal="input_event" from="A" to="." method="_on_A_input_event"]
[connection signal="input_event" from="A2" to="." method="_on_A2_input_event"]
[connection signal="input_event" from="B" to="." method="_on_B_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
